--- a/FarmScout/Views/DashboardPage.xaml
+++ b/FarmScout/Views/DashboardPage.xaml
@@ -4,6 +4,7 @@
              x:Class="FarmScout.Views.DashboardPage"
              x:DataType="viewmodels:DashboardViewModel"
              xmlns:viewmodels="clr-namespace:FarmScout.ViewModels"
+             xmlns:converters="clr-namespace:FarmScout.Converters"
              Title="{Binding Title}">
     
     <Grid RowDefinitions="*,Auto">
@@ -95,7 +96,7 @@
                                                                         Color="#4CAF50"/>
                                                 
                                                     <!-- Actual Image -->
-                                                    <Image Source="{Binding PhotoPath}" 
+                                                    <Image Source="{Binding PhotoData, Converter={StaticResource ByteArrayToImageSourceConverter}}" 
                                                             Aspect="AspectFill"
                                                             IsVisible="{Binding HasPhoto}"
                                                             HorizontalOptions="Fill"
